tests/artifacts/httproute-no-hostnames.out

HTTPRoute/myapp-prom-prometheus-prometheus -n prom, created 1m ago by HTTPRoute/prom-prometheus-prometheus, gen:1
  Current: Resource is current
  Parents:
    Gateway/myapp-envoy-gateway -n infra-envoy-gateway
      controller: gateway.envoyproxy.io/gatewayclass-controller
      Accepted:True Accepted, Route is accepted for 1m
      ResolvedRefs:True ResolvedRefs, Resolved all the Object references for the Route for 1m
  Rules:
    PathPrefix /
      header:Host=^prom\.app\..*
    → Service/prom-prometheus:9090
